--- a/1.html
+++ b/1.html
@@ -1,1 +1,5 @@
-this is 1.html file
+FROM ubuntu
+RUN apt update
+RUN apt install apache2 -y
+ADD . /var/www/html
+ENTRYPOINT apachectl1 -D FOREGROUND 
